{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 104,
  "lineage": "409d7c4f-a66a-c832-1c63-a805c4833892",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:internet-gateway/igw-06b937457fa7bc400",
            "id": "igw-06b937457fa7bc400",
            "owner_id": "940659974471",
            "region": "eu-west-2",
            "tags": {
              "Name": "java-login-app-igw-v2"
            },
            "tags_all": {
              "Name": "java-login-app-igw-v2"
            },
            "vpc_id": "vpc-031282f898913454c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:loadbalancer/app/java-login-app-alb-v2/b32b5c7cd1d4809c",
            "arn_suffix": "app/java-login-app-alb-v2/b32b5c7cd1d4809c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "java-login-app-alb-v2-835214865.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:loadbalancer/app/java-login-app-alb-v2/b32b5c7cd1d4809c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "java-login-app-alb-v2",
            "preserve_host_header": false,
            "region": "eu-west-2",
            "security_groups": [
              "sg-024180c3222fcde30"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08cc4fe38359272b2"
              },
              {
                "subnet_id": "subnet-0958971550d18dbe7"
              }
            ],
            "subnets": [
              "subnet-08cc4fe38359272b2",
              "subnet-0958971550d18dbe7"
            ],
            "tags": {
              "Name": "java-login-app-alb-v2"
            },
            "tags_all": {
              "Name": "java-login-app-alb-v2"
            },
            "vpc_id": "vpc-031282f898913454c",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:listener/app/java-login-app-alb-v2/b32b5c7cd1d4809c/4172bddbae501eb2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:targetgroup/java-login-app-tg-v2/970bf48b58d26f02",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:listener/app/java-login-app-alb-v2/b32b5c7cd1d4809c/4172bddbae501eb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:loadbalancer/app/java-login-app-alb-v2/b32b5c7cd1d4809c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_a",
            "aws_subnet.public_subnet_b",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:targetgroup/java-login-app-tg-v2/970bf48b58d26f02",
            "arn_suffix": "targetgroup/java-login-app-tg-v2/970bf48b58d26f02",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:940659974471:targetgroup/java-login-app-tg-v2/970bf48b58d26f02",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "java-login-app-tg-v2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "java-login-app-tg-v2"
            },
            "tags_all": {
              "Name": "java-login-app-tg-v2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-031282f898913454c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:route-table/rtb-0652c5a199bc43e21",
            "id": "rtb-0652c5a199bc43e21",
            "owner_id": "940659974471",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b937457fa7bc400",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-v2"
            },
            "tags_all": {
              "Name": "public-rt-v2"
            },
            "timeouts": null,
            "vpc_id": "vpc-031282f898913454c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba6f28c6412db3d4",
            "region": "eu-west-2",
            "route_table_id": "rtb-0652c5a199bc43e21",
            "subnet_id": "subnet-0958971550d18dbe7"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_a",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dd935251d711d31",
            "region": "eu-west-2",
            "route_table_id": "rtb-0652c5a199bc43e21",
            "subnet_id": "subnet-08cc4fe38359272b2"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_b",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:security-group/sg-024180c3222fcde30",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024180c3222fcde30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "java-login-app-alb-sg-v2",
            "name_prefix": "",
            "owner_id": "940659974471",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java-login-app-alb-sg-v2"
            },
            "tags_all": {
              "Name": "java-login-app-alb-sg-v2"
            },
            "timeouts": null,
            "vpc_id": "vpc-031282f898913454c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:security-group/sg-0579c2ad3d1b77bc0",
            "description": "Allow HTTP traffic to app instances and SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0579c2ad3d1b77bc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.136.13.188/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024180c3222fcde30"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "java-login-app-app-sg-v2",
            "name_prefix": "",
            "owner_id": "940659974471",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "java-login-app-app-sg-v2"
            },
            "tags_all": {
              "Name": "java-login-app-app-sg-v2"
            },
            "timeouts": null,
            "vpc_id": "vpc-031282f898913454c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:subnet/subnet-0958971550d18dbe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958971550d18dbe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940659974471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-a-v2"
            },
            "tags_all": {
              "Name": "public-subnet-a-v2"
            },
            "vpc_id": "vpc-031282f898913454c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:subnet/subnet-08cc4fe38359272b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc4fe38359272b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940659974471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "public-subnet-b-v2"
            },
            "tags_all": {
              "Name": "public-subnet-b-v2"
            },
            "vpc_id": "vpc-031282f898913454c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:940659974471:vpc/vpc-031282f898913454c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04e2f0720c77dda2b",
            "default_route_table_id": "rtb-0306db6283cf1d633",
            "default_security_group_id": "sg-00b9a43ee32220bde",
            "dhcp_options_id": "dopt-0a9fab4b45b0130b8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031282f898913454c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0306db6283cf1d633",
            "owner_id": "940659974471",
            "region": "eu-west-2",
            "tags": {
              "Name": "java-login-app-vpc-v2"
            },
            "tags_all": {
              "Name": "java-login-app-vpc-v2"
            }
          }
        }
      ]
    }
  ]
}